# matica-ja-fysikka-ohjelmonti

./: .gitlab-ci.yml  CMakeLists.txt  CppCheckSuppressions.txt  README.md
assignments/: matematiikan_ohjelmoinnin_tehtavat.md  math.h
ext/mikroplot-main/src/: window.cpp
include/: func_util.h
notebooks/: 11_sat_collosion.cpp  1_functions.cpp  2_simple_draw.cpp  3_integration.cpp  4_newton.cpp  5_lin_alg.cpp  7_collisions.cpp  8_phys_points.cpp  main_matrix.cpp
submissions/t0/: tehtäva.md
submissions/t1/: t1_submissions.md  test_draw_functions.cpp
submissions/t2/: t2_submissions.md  test_integration.cpp
submissions/t3/: math.cpp  math.h  test_math.cpp
submissions/t4/: sat.h  test_sat.cpp
submissions/t5/: particle_demo.cpp
submissions/t6/: spring_demo.cpp
submissions/t7_t8_harjotustyo/: t7_t8_harjotustyo.cpp
theory/: functional_programming.md
